U1 remove fcmToken and replace with userDevices
